<resources>
    <string name="app_name">InfoAppByFragment</string>
    <string name="GenderFemale">Female</string>
    <string name="GenderMale">Male</string>
    <string name="register">Register</string>
    <string name="Gender">Gender</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>