<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textField_FullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/full_name"
                        android:paddingStart="0dp"
                        android:text=""
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textField_Username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/username"
                        android:paddingStart="0dp"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textField_Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="0dp"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textField_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="0dp"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textField_RetypePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/re_type_password"
                        android:inputType="textPassword"
                        android:paddingStart="0dp"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/textView_Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Gender"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"

                />

            <RadioGroup
                android:id="@+id/RadioGroup_Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GenderFemale"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView_Gender"
                    app:layout_constraintTop_toBottomOf="@+id/textView_Gender" />

                <RadioButton
                    android:id="@+id/radioButton_Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/GenderMale"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/radioButton_Female"
                    app:layout_constraintStart_toEndOf="@+id/radioButton_Female"
                    app:layout_constraintTop_toTopOf="@+id/radioButton_Female"
                    app:layout_constraintVertical_bias="0.0" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="false"
                app:cornerRadius="20dp" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>